--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -10,6 +10,7 @@
       <span class="slider round"></span>
     </label><br>
     <button id="steam_Inv_His_Filter_Apply_Btn">Apply Tag Filter</button><br>
+    <button onclick="dahwdiuahwudi()" id="steamwada_Inv_Hi">func</button><br>
     <button id="steam_Inv_His_Filter_Clear_Btn">Clear Filter</button><br>
     <span>future automatic loading button</span><br>
     <span>Ideas:</span><br>
