loading now partly works

--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -17,6 +17,7 @@
     <span>filter type of container by looking for key or type of case</span><br>
     <span>advanced filter, by letting you enter prompt</span><br>
     <span>minimize when moblie version</span>
+    <span id="inventory_history_count">50</span>
   </div>
 
   <div id="filter_Transfer_List">
