--- a/css/filterStyle.css
+++ b/css/filterStyle.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+.steam_filter_hide_class {
+  display: none;
+}
+
 /* Desktop */
 @media only screen and (min-width: 1601px) {
   #steam_Inv_His_Filter_Window:not(.steam_Inv_His_Filter_Window_top) {
