--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -74,7 +74,7 @@
     <div class="newmodal_header_border">
       <div class="newmodal_header">
         <!--<div class="newmodal_close steam_Inv_Loader_Win_Dismiss" data-panel="{&quot;focusable&quot;:true,&quot;clickOnActivate&quot;:true}"></div>-->
-        <div class="title_text">Loading History</div>
+        <div id="steam_Inv_Loader_Win_Title_Text" class="title_text">Loading History</div>
       </div>
     </div>
     <div class="newmodal_content_border">
