--- a/css/filterStyle.css
+++ b/css/filterStyle.css
@@ -143,10 +143,10 @@ button {
 
 .container {
   text-align: center;
-  float: left;
   width:200px;
   display: inline-block;
-  border: 1px solid black;
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.2);
+  border-radius: 6px;
 }
 
 .container-2 {
@@ -160,17 +160,18 @@ button {
 .container-3 {
   text-align: center;
   width:200px;
-  float: right;
   box-sizing: border-box;
   display: inline-block;
-  border: 1px solid black;
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.2);
   margin: 0 auto;
+  border-radius: 6px;
 }
 
 #filter_Transfer_List .list-Title {
   width: 100%;
-  background-color: #1c1f21;
-  border: 1px solid black;
+  background: linear-gradient(to right, #00ccff, #3366ff);
+  border-radius: 4px;
+  color: #ffffff;
 }
 
 .filter-List {
@@ -182,33 +183,105 @@ button {
 .transfer {
   display: block;
   margin: auto;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .filter-List li {
-  border: 1px solid #979797;
+  font-family: "Motiva Sans", Sans-serif;
+  font-weight: 400;
+
   padding: 10px;
   color: #b1b1b1;
+
+  margin: 10px;
+  margin-left: 15px;
+  margin-right: 15px;
+  
+  border-radius: 4px;
+  display: block;
+  background-color: #32363f;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+
+  transition:0.2s all ease-out;
+}
+
+.filter-List li:last-child {
+  margin-bottom: 15px;
+}
+.filter-List li:first-child {
+  margin-top: 15px;
 }
 
 .filter-List li:hover {
-  border: 1px solid #ffffff;
-  background-color: #434c51;
+  /*border: 1px solid #ffffff;
+  /*background-color: #434c51;*/
+  background: linear-gradient( to right, #464d58 5%, #464d58 95%);
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
 }
 
 
 
 .selected {
-    background-color: #4394bf;
-    color: #1c1f21 !important;
+  background: linear-gradient(to right, #00c0f0, #3161f3);
+    color: #ffffff !important;
 }
 .selected:hover {
-  background-color:#50b1e5 !important;
+  background: linear-gradient(to right, #4bdbff, #537eff) !important;
 }
 li {
   cursor: pointer;
 }
 
+.steam_filter_gui_button_group > * {
+  padding: 0;
+  margin: 0;
+}
 
+.steam_filter_gui_button_group {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.tool_button_group {
+  flex-direction: column;
+}
+
+.tool_button_group li {
+  margin: auto;
+}
+
+.transfer_buttons {
+  aspect-ratio: 1;
+}
+
+.steam_filter_gui_button {
+
+  font-family: "Motiva Sans", Sans-serif;
+  font-weight: 400;
+
+  padding: 10px;
+  color: #b1b1b1;
+
+  margin: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
+  
+  border-radius: 4px;
+  border-width: 0;
+  display: block;
+  background-color: #32363f;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+
+  transition:0.2s all ease-out;
+}
+
+.steam_filter_gui_button:hover {
+  background: linear-gradient( to right, #464d58 5%, #464d58 95%);
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
+}
 
 
 
