--- a/css/filterOptionsDialog.css
+++ b/css/filterOptionsDialog.css
@@ -1,6 +1,33 @@
 #steam_filter_Options .newmodal {
+    max-height: 85vh;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 4px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: red; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b30000; 
+}
+
+.filter-List {
+    overflow-y: auto;
+    max-height: 65vh;
+}
 
 #steam_filter_Options_Message {
 
