--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -71,7 +71,7 @@
 
 
 <!-- Filter Options V2 -->
-<div class="steam_filter_hide_class" id="steam_filter_Options">
+<div class="steam_filter_hide_class steam_filter_dialog_group" id="steam_filter_Options">
   <div class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
@@ -142,7 +142,7 @@
 </div>
 
 <!-- Stats -->
-<div class="steam_filter_hide_class" id="steam_filter_Stats">
+<div class="steam_filter_hide_class steam_filter_dialog_group" id="steam_filter_Stats">
   <div class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
@@ -172,7 +172,7 @@
 </div>
 
 <!-- Default Alert Dialog -->
-<div class="steam_filter_hide_class" id="steam_filter_alert_Dialog">
+<div class="steam_filter_hide_class steam_filter_dialog_group" id="steam_filter_alert_Dialog">
   <div class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
@@ -194,7 +194,7 @@
 </div>
 
 <!-- Loading History Dialog -->
-<div class="steam_filter_hide_class" id="Loading_For_Rows_Dialog">
+<div class="steam_filter_hide_class steam_filter_dialog_group" id="Loading_For_Rows_Dialog">
   <div class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
