--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -71,7 +71,7 @@
 
 
 <!-- Filter Options V2 -->
-<div class="steam_filter_hide_class steam_filter_dialog_group" id="steam_filter_Options">
+<div class="steam_filter_hide_class2 steam_filter_dialog_group" id="steam_filter_Options">
   <div class="newmodal steam_inv_filter_modal" data-panel="{&quot;onCancelButton&quot;:&quot;CModal.DismissActiveModal()&quot;}">
     <div class="modal_top_bar"></div>
     <div class="newmodal_header_border">
@@ -111,10 +111,28 @@
               </div>
             </div>
             <div class="container-2">
+              <div id="steam_filter_searchbar_win">
+                <h3 class="list-Title">Search</h3>
+                <form id="steam_filter_searchbar_win_form" action="">
+                  <div class="searchbar_container">
+                    <label class="searchbar_form_object steam_filter_gui_label" for="searchbar">Search</label>
+                    <input class="searchbar_form_object steam_filter_gui_input" type="text" id="searchbar_data" name="searchbar_data">
+                    <label class="searchbar_form_object steam_filter_gui_label" for="label">Alt. Label</label>
+                    <input class="searchbar_form_object steam_filter_gui_input" type="text" id="label_data" name="label_data">
+                    <div>
+                      <input class="searchbar_form_object steam_filter_gui_button" type="submit" id="add_search_filter" name="add_search_filter" value="Add">
+                      <input class="searchbar_form_object steam_filter_gui_button" type="submit" id="add_search_filter" name="add_search_filter" value="Search">
+                    </div>
+                  </div>
+                </form>
+                <div id="steam_filter_searchbar_advanced_container">
+                  <button id="steam_filter_searchbar_advanced" class="steam_filter_gui_button">Advanced</button>
+                </div>
+              </div>
               <div class="transfer">
                 <ul class="steam_filter_gui_button_group transfer_button_group">
-                  <li><button class="steam_filter_gui_button transfer_buttons" id="move_left"><<</button></li>
-                  <li><button class="steam_filter_gui_button transfer_buttons" id='move_right'>>></button></li>
+                  <li><button class="steam_filter_gui_button transfer_buttons" id="move_left">⮜</button></li>
+                  <li><button class="steam_filter_gui_button transfer_buttons" id='move_right'>⮞</button></li>
                 </ul>
                 <ul class="steam_filter_gui_button_group tool_button_group">
                   <li><button class="steam_filter_gui_button" id="hide_all_filter_list">Hide All</button></li>
