--- a/css/filterOptionsDialog.css
+++ b/css/filterOptionsDialog.css
@@ -30,6 +30,207 @@
     max-height: 65vh;
 }
 
-#steam_filter_Options_Message {
+/* most of dialog */
+#filter_Transfer_List {
+  display: flex;
+  justify-self: flex-start;
+}
 
+.container {
+  text-align: center;
+  width:200px;
+  display: inline-block;
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.35);
+  border-radius: 6px;
+}
+
+.container-2 {
+  position: relative; /* added this line */
+  text-align: center;
+  
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+  margin: 40px;
+  margin-top: 0;
+}
+
+.container-3 {
+  text-align: center;
+  width:200px;
+  box-sizing: border-box;
+  display: inline-block;
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.35);
+  margin: 0 auto;
+  border-radius: 6px;
+}
+
+#filter_Transfer_List .list-Title {
+  width: 100%;
+  background: linear-gradient(to right, #00ccff, #3366ff);
+  border-radius: 4px;
+  color: #ffffff;
+}
+
+.filter-List {
+  list-style: none;
+  padding-inline-start: 0px;
+  margin: 0;
+}
+
+.transfer {
+  position: absolute; /* added this line */
+  top: 50%; /* added this line */
+  transform: translateY(-50%); /* added this line */
+  display: flex;
+  margin-left: 20px;
+  margin-right: 20px;
+  flex-direction: column;
+  margin: auto;
+}
+
+.filter-List li {
+  font-family: "Motiva Sans", Sans-serif;
+  font-weight: 400;
+
+  padding: 10px;
+  color: #b1b1b1;
+
+  margin: 10px;
+  margin-left: 15px;
+  margin-right: 15px;
+  
+  border-radius: 4px;
+  display: block;
+  background-color: #32363f;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+
+  transition:0.2s all ease-out;
+}
+
+.filter-List li:last-child {
+  margin-bottom: 15px;
+}
+.filter-List li:first-child {
+  margin-top: 15px;
+}
+
+.filter-List li:hover {
+  /*border: 1px solid #ffffff;
+  /*background-color: #434c51;*/
+  background: linear-gradient( to right, #464d58 5%, #464d58 95%);
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
+}
+
+
+
+.selected {
+  background: linear-gradient(to right, #00c0f0, #3161f3);
+    color: #ffffff !important;
+}
+.selected:hover {
+  background: linear-gradient(to right, #4bdbff, #537eff) !important;
+}
+li {
+  cursor: pointer;
+}
+
+.steam_filter_gui_button_group > * {
+  padding: 0;
+  margin: 0;
+}
+
+.steam_filter_gui_button_group {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.tool_button_group {
+  flex-direction: column;
+}
+
+.tool_button_group li {
+  margin: auto;
+}
+
+.transfer_buttons {
+  aspect-ratio: 1;
+  font-size: large;
+}
+
+.transfer_button_group {
+  margin: auto;
+}
+
+.steam_filter_gui_button {
+  font-family: "Motiva Sans", Sans-serif;
+  font-weight: 400;
+  cursor: pointer;
+
+  padding: 10px;
+  color: #b1b1b1;
+
+  margin: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
+  
+  border-radius: 4px;
+  border-width: 0;
+  display: block;
+  background-color: #32363f;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+
+  transition:0.2s all ease-out;
+}
+
+.steam_filter_gui_button:hover {
+  background: linear-gradient( to right, #464d58 5%, #464d58 95%);
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
+}
+
+/* Searchbar Form */
+#steam_filter_searchbar_win_form {
+  text-align: left;
+  width: 250px;
+  display: inline-block;
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.35);
+  border-radius: 6px;
+}
+
+#steam_filter_searchbar_win_form .searchbar_container {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+#steam_filter_searchbar_win_form .searchbar_container div {
+  display: flex;
+}
+
+#steam_filter_searchbar_win .steam_filter_gui_button {
+  flex-grow: 1;
+}
+
+.steam_filter_gui_label {
+  font-size: 1.10em;
+  border: 0;
+}
+
+.steam_filter_gui_input {
+  margin-top: 8px;
+  margin-bottom: 8px;
+  border-radius: 6px !important;
+
+  padding: 8px;
+
+  font-size: medium;
+  border: 0 !important;
+  box-shadow: inset 0 0 10px rgba(8, 8, 8, 0.1); 
+}
+
+#steam_filter_searchbar_advanced_container {
+  display: flex;
+  margin-top: 15px;
 }
