--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -89,24 +89,24 @@
               <div class="list-1">
                 <h3 class="list-Title">Show</h3>
                 <ul id="filter_list_show" class="list1 filter-List">
-                  <li data-tag="Earned"> Medals </li>
-                  <li data-tag="Moved to Storage Unit"> Storage Unit </li>
-                  <li data-tag="Got an item drop"> Case Drops </li>
-                  <li data-tag="Earned a new rank and got a drop"> Item Drops </li>
-                  <li data-tag="You traded with "> Trades </li>
-                  <li data-tag="Unlocked a container"> Container Opened </li>
-                  <li data-tag="Purchased from the store"> Store Purchases </li>
-                  <li data-tag="You purchased an item on the Community Market."> Market Purchases </li>
-                  <li data-tag="You listed an item on the Community Market."> Market Created Listings </li>
-                  <li data-tag="You canceled a listing on the Community Market. The item was returned to you."> Market Removed Listings </li>
-                  <li data-tag="Used"> Used </li>
-                  <li data-tag="Earned a souvenir drop"> Souvenir drop </li>
-                  <li data-tag="Crafted"> Trade ups </li>
-                  <li data-tag="Sticker applied"> Sticker applied </li>
-                  <li data-tag="Sticker removed"> Sticker removed </li>
-                  <li data-tag="You deleted"> Deleted Item </li>
-                  <li data-tag="Unsealed"> Unsealed Graffiti </li>
-                  <li data-tag="Mission reward"> Mission Reward (Operations) </li>
+                  <li data-main-tag="Earned"> Medals </li>
+                  <li data-main-tag="Moved to Storage Unit"> Storage Unit </li>
+                  <li data-main-tag="Got an item drop"> Case Drops </li>
+                  <li data-main-tag="Earned a new rank and got a drop"> Item Drops </li>
+                  <li data-main-tag="You traded with "> Trades </li>
+                  <li data-main-tag="Unlocked a container"> Container Opened </li>
+                  <li data-main-tag="Purchased from the store"> Store Purchases </li>
+                  <li data-main-tag="You purchased an item on the Community Market."> Market Purchases </li>
+                  <li data-main-tag="You listed an item on the Community Market."> Market Created Listings </li>
+                  <li data-main-tag="You canceled a listing on the Community Market. The item was returned to you."> Market Removed Listings </li>
+                  <li data-main-tag="Used"> Used </li>
+                  <li data-main-tag="Earned a souvenir drop"> Souvenir drop </li>
+                  <li data-main-tag="Crafted"> Trade ups </li>
+                  <li data-main-tag="Sticker applied"> Sticker applied </li>
+                  <li data-main-tag="Sticker removed"> Sticker removed </li>
+                  <li data-main-tag="You deleted"> Deleted Item </li>
+                  <li data-main-tag="Unsealed"> Unsealed Graffiti </li>
+                  <li data-main-tag="Mission reward"> Mission Reward (Operations) </li>
                 </ul>
               </div>
             </div>
@@ -135,8 +135,8 @@
                   <li><button class="steam_filter_gui_button transfer_buttons" id='move_right'>⮞</button></li>
                 </ul>
                 <ul class="steam_filter_gui_button_group tool_button_group">
+                  <li><button class="steam_filter_gui_button" id="reset_filter_list">Show All</button></li>
                   <li><button class="steam_filter_gui_button" id="hide_all_filter_list">Hide All</button></li>
-                  <li><button class="steam_filter_gui_button" id="reset_filter_list">Reset</button></li>
                 </ul>
               </div>
             </div>
