--- a/components/filterWindow.html
+++ b/components/filterWindow.html
@@ -129,7 +129,7 @@
       <div class="newmodal_content" style="max-height: 75vh;">
 
         <div>
-          <form id="market_advanced_search" accept-charset="UTF8" action="https://steamcommunity.com/market/search" method="GET">
+          <form id="market_advanced_search" accept-charset="UTF8" action="">
 						<div id="market_advancedsearch_left">
               <input class="filter_search_box market_search_sidebar_search_box" type="text" id="advancedSearchBox" value="" placeholder="Search" name="q" autocomplete="off" tabindex="1">
               <input class="market_search_submit_button" id="advancedSearchSubmit" type="submit" value="Submit" tabindex="3">
