--- a/css/filterOptionsDialog.css
+++ b/css/filterOptionsDialog.css
@@ -233,6 +233,10 @@ li {
 }
 
 /* Advanced */
+.steam_inv_filter_modal_advanced {
+  max-width: 955px !important;
+}
+
 .econ_tag_filter_checkbox {
   appearance: none;
   background-color: #464d58;
@@ -247,14 +251,16 @@ li {
   
   display: grid;
   place-content: center;
+  cursor: pointer;
 }
 
 .econ_tag_filter_checkbox::before {
   content: "";
-  width: 0.65em;
-  height: 0.65em;
+  width: 1.15em;
+  height: 1.15em;
+  border-radius: 0.15em;
   transform: scale(0);
-  transition: 120ms transform ease-in-out;
+  transition: 80ms transform ease-in-out;
   box-shadow: inset 1.2em 1.2em #00c0f0;
 }
 .econ_tag_filter_checkbox:checked::before {
@@ -269,4 +275,93 @@ li {
   grid-template-columns: 1em auto;
   gap: 0.5em;
   margin-top: 0.5em;
+}
+
+.econ_tag_filter_category_label {
+  font-size: 1.1rem !important;
+  font-weight: bold;
+  line-height: 1.1;
+}
+
+.econ_tag_filter_category {
+  background-color: #32363f;
+  padding: 0.8em;
+  border-radius: 0.4em;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.econ_tag_filter_category select {
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 1.1;
+  background-color: #32363f !important;
+  
+  border-radius: 6px !important;
+
+  padding: 2px;
+
+  font-size: medium;
+  border: 0 !important;
+  box-shadow: inset 0 0 10px rgba(8, 8, 8, 0.3) !important; 
+}
+
+.econ_tag_filter_category select option {
+  font-size: 1rem;
+  line-height: 1.1;
+  background-color: #32363f !important;
+  
+  border-radius: 6px !important;
+
+  padding: 2px;
+
+  font-size: medium;
+  border: 0 !important;
+}
+
+#market_advancedsearch_filters {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+/*
+On Mobile
+
+#market_advancedsearch_filters {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(auto, 1fr));
+  grid-gap: 10px;
+}
+*/
+
+
+#market_advancedsearch_left {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 1em;
+}
+
+
+.market_search_submit_button {
+  background: linear-gradient(to right, #00c0f0, #3161f3);
+  color: #ffffff !important;
+}
+.market_search_submit_button:hover {
+  background: linear-gradient(to right, #4bdbff, #537eff) !important;
+}
+
+.filter_search_box {
+  font-family: "Motiva Sans", Sans-serif !important;
+  font-weight: 400 !important;
+  border-radius: 4px !important;
+  margin: 5px;
+  padding-left: 5px !important;
+  padding-right: 5px !important;
+  margin-left: 10px;
+  margin-right: 10px;
+  color: #b1b1b1 !important;
+  background-color: #282b32 !important;
+  box-shadow: inset 0 0 10px rgba(8, 8, 8, 0.3) !important;
+  width: 200px;
 }
